Adding option to show all possible models.

--- a/model-cartoons-mixed-events.tex
+++ b/model-cartoons-mixed-events.tex
@@ -136,6 +136,15 @@
 \input{template.tex}
 \endpgfgraphicnamed
 
+\renewcommand{\thirdTipTLabelColor}{6-auburn}
+
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/mixed-model-111-lines-altcolor-small}
+\input{template.tex}
+\endpgfgraphicnamed
+
+\renewcommand{\thirdTipTLabelColor}{5-teal}
+
 
 % 311 model
 \renewcommand{\ifshoweventlabels}[2]{#1}
@@ -163,6 +172,15 @@
 \beginpgfgraphicnamed{model-cartoons/mixed-model-311-lines-small}
 \input{template.tex}
 \endpgfgraphicnamed
+
+\renewcommand{\thirdTipTLabelColor}{6-auburn}
+
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/mixed-model-311-lines-altcolor-small}
+\input{template.tex}
+\endpgfgraphicnamed
+
+\renewcommand{\thirdTipTLabelColor}{5-teal}
 
 
 % 131 model
@@ -192,6 +210,15 @@
 \input{template.tex}
 \endpgfgraphicnamed
 
+\renewcommand{\thirdTipTLabelColor}{6-auburn}
+
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/mixed-model-131-lines-altcolor-small}
+\input{template.tex}
+\endpgfgraphicnamed
+
+\renewcommand{\thirdTipTLabelColor}{5-teal}
+
 
 % 113 model
 \renewcommand{\ifshoweventlabels}[2]{#1}
@@ -220,6 +247,15 @@
 \input{template.tex}
 \endpgfgraphicnamed
 
+\renewcommand{\thirdTipTLabelColor}{6-auburn}
+
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/mixed-model-113-lines-altcolor-small}
+\input{template.tex}
+\endpgfgraphicnamed
+
+\renewcommand{\thirdTipTLabelColor}{5-teal}
+
 
 % 213 model
 \renewcommand{\ifshoweventlabels}[2]{#1}
@@ -247,5 +283,14 @@
 \beginpgfgraphicnamed{model-cartoons/mixed-model-213-lines-small}
 \input{template.tex}
 \endpgfgraphicnamed
+
+\renewcommand{\thirdTipTLabelColor}{6-auburn}
+
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/mixed-model-213-lines-altcolor-small}
+\input{template.tex}
+\endpgfgraphicnamed
+
+\renewcommand{\thirdTipTLabelColor}{5-teal}
 
 \end{document}
