--- a/preamble.tex
+++ b/preamble.tex
@@ -39,6 +39,7 @@
 \newcommand{\ifshoweventlines}[2]{#1}
 \newcommand{\ifshowrootlabels}[2]{#1}
 \newcommand{\ifshowleaflabels}[2]{#1}
+\newcommand{\ifshowmodels}[2]{#2}
 
 \newcommand{\leafLabelOffset}{0mm}
 \newcommand{\alleleLeafLabelOffset}{0mm}
@@ -93,6 +94,12 @@
 \newcommand{\secondTipBLabelColor}{6-auburn}
 \newcommand{\thirdTipTLabelColor}{5-teal}
 \newcommand{\thirdTipBLabelColor}{6-auburn}
+
+\newcommand{\modelthreepath}{model-cartoons/mixed-model-213-lines-small.pdf}
+\newcommand{\modeltwothreepath}{model-cartoons/mixed-model-113-lines-small.pdf}
+\newcommand{\modeltwotwopath}{model-cartoons/mixed-model-131-lines-small.pdf}
+\newcommand{\modeltwoonepath}{model-cartoons/mixed-model-311-lines-small.pdf}
+\newcommand{\modelonepath}{model-cartoons/mixed-model-111-lines-small.pdf}
 
 \newcommand{\getEventLabel}[1]{%
     \ifthenelse{\equal{#1}{\shallowdepth}}%
