--- a/preamble.tex
+++ b/preamble.tex
@@ -40,6 +40,7 @@
 \newcommand{\ifshowrootlabels}[2]{#1}
 \newcommand{\ifshowleaflabels}[2]{#1}
 \newcommand{\ifshowmodels}[2]{#2}
+\newcommand{\ifshowcomparisonlabels}[2]{#2}
 
 \newcommand{\leafLabelOffset}{0mm}
 \newcommand{\alleleLeafLabelOffset}{0mm}
