Adding more control of parameter labels.
Allowing control of pop size labels for all comparisons.

--- a/model-cartoons-mixed-events.tex
+++ b/model-cartoons-mixed-events.tex
@@ -145,6 +145,13 @@
 
 \renewcommand{\thirdTipTLabelColor}{5-teal}
 
+\renewcommand{\ifshowleaflabels}[2]{#2}
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/mixed-model-111-lines-bare-small}
+\input{template.tex}
+\endpgfgraphicnamed
+\renewcommand{\ifshowleaflabels}[2]{#1}
+
 
 % 311 model
 \renewcommand{\ifshoweventlabels}[2]{#1}
@@ -181,6 +188,13 @@
 \endpgfgraphicnamed
 
 \renewcommand{\thirdTipTLabelColor}{5-teal}
+
+\renewcommand{\ifshowleaflabels}[2]{#2}
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/mixed-model-311-lines-bare-small}
+\input{template.tex}
+\endpgfgraphicnamed
+\renewcommand{\ifshowleaflabels}[2]{#1}
 
 
 % 131 model
@@ -219,6 +233,13 @@
 
 \renewcommand{\thirdTipTLabelColor}{5-teal}
 
+\renewcommand{\ifshowleaflabels}[2]{#2}
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/mixed-model-131-lines-bare-small}
+\input{template.tex}
+\endpgfgraphicnamed
+\renewcommand{\ifshowleaflabels}[2]{#1}
+
 
 % 113 model
 \renewcommand{\ifshoweventlabels}[2]{#1}
@@ -256,6 +277,13 @@
 
 \renewcommand{\thirdTipTLabelColor}{5-teal}
 
+\renewcommand{\ifshowleaflabels}[2]{#2}
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/mixed-model-113-lines-bare-small}
+\input{template.tex}
+\endpgfgraphicnamed
+\renewcommand{\ifshowleaflabels}[2]{#1}
+
 
 % 213 model
 \renewcommand{\ifshoweventlabels}[2]{#1}
@@ -292,5 +320,12 @@
 \endpgfgraphicnamed
 
 \renewcommand{\thirdTipTLabelColor}{5-teal}
+
+\renewcommand{\ifshowleaflabels}[2]{#2}
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/mixed-model-213-lines-bare-small}
+\input{template.tex}
+\endpgfgraphicnamed
+\renewcommand{\ifshowleaflabels}[2]{#1}
 
 \end{document}
