--- a/model-choice-cartoon-mixed-events.tex
+++ b/model-choice-cartoon-mixed-events.tex
@@ -86,4 +86,25 @@
 \input{template.tex}
 \endpgfgraphicnamed
 
+\renewcommand{\modelthreepath}{model-cartoons/mixed-model-213-lines-bare-small.pdf}
+\renewcommand{\modeltwothreepath}{model-cartoons/mixed-model-113-lines-bare-small.pdf}
+\renewcommand{\modeltwotwopath}{model-cartoons/mixed-model-131-lines-bare-small.pdf}
+\renewcommand{\modeltwoonepath}{model-cartoons/mixed-model-311-lines-bare-small.pdf}
+\renewcommand{\modelonepath}{model-cartoons/mixed-model-111-lines-bare-small.pdf}
+\renewcommand{\ifshowislands}[2]{#2}
+\renewcommand{\ifshowrootlabels}[2]{#2}
+\renewcommand{\ifshowleaflabels}[2]{#2}
+\renewcommand{\ifshowpopsizelabels}[2]{#1}
+\renewcommand{\ifshowpopsizelabelstwo}[2]{#1}
+\renewcommand{\ifshowpopsizelabelsone}[2]{#1}
+\renewcommand{\rootSizeLabelCompThree}{\epopsize[\rootpopindex{}]{$_3$}}
+\renewcommand{\tipTopSizeLabelCompThree}{\small\epopsize[\descendantpopindex{1}]{$_3$}}
+\renewcommand{\tipBottomSizeLabelCompThree}{\small\epopsize[\descendantpopindex{2}]{$_3$}}
+\renewcommand{\tipSizeLabelCompThree}{\small\epopsize[\descendantpopindex{}]{$_3$}}
+
+\thispagestyle{empty}
+\beginpgfgraphicnamed{model-cartoons/mixed-model-description}
+\input{template.tex}
+\endpgfgraphicnamed
+
 \end{document}
